Drag&Drop from File Manager stopped working
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox126 | --- | unaffected |
firefox127 | --- | unaffected |
firefox128 | --- | fixed |
People
(Reporter: bugzilla.mozilla.org, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(2 files)
Dropping a file from the nemo file manager stopped working. This reproduces on multiple different sites.
Example steps:
- open https://www.bing.com/
- click on the image search icon (the camera icon in the search box)
- drop an image onto the "Drag one or more images here" box -> does not work
- upload file via the file picker dialog instead -> works
Firefox 128.0a1 20240517215359
X11/i3wm
Comment 1•6 months ago
•
|
||
I can reproduce the issue on Nightly128.0a1 Ubuntu22.04, but not on Windows11.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=ee555af7538d663526ee4d32d45e6f556a1e5371&tochange=e4fc6bb9cf969a4b7ca9e1621b59c7129ece1079
Updated•6 months ago
|
Updated•6 months ago
|
Comment 2•6 months ago
|
||
:stransky, since you are the author of the regressor, bug 1896863, could you take a look?
For more information, please visit BugBot documentation.
Assignee | ||
Comment 3•6 months ago
|
||
Can you attach D&D log?
Please try to capture broken scenario and attach log from it. Run Firefox on terminal as:
MOZ_LOG="WidgetDrag:5" firefox > log.txt 2>&1
and if you reproduce it attach log.txt here.
Thanks.
The requested log file
Assignee | ||
Updated•6 months ago
|
Assignee | ||
Comment 5•6 months ago
|
||
Fix wrong conversion orders introduced in Bug 1896863 where convert to/from is swapped.
Updated•6 months ago
|
Assignee | ||
Updated•6 months ago
|
Description
•