Bug 1897574 [Linux] Update MIME type conversions for D&D r=emilio

Fix wrong conversion orders introduced in Bug 1896863 where convert to/from is swapped.

Differential Revision: https://phabricator.services.mozilla.com/D210942